[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "aiscat"
version = "0.68.12"
description = "Fast, complete AIS NMEA decoder for Python"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [{name = "jvde-github", email = "jvde.github@gmail.com"}]
keywords = ["ais", "nmea", "maritime", "ship-tracking", "sdr", "aivdm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Repository = "https://github.com/jvde-github/AIS-catcher"
Issues = "https://github.com/jvde-github/AIS-catcher/issues"

[tool.scikit-build]
minimum-version = "0.5"
cmake.version = ">=3.15"
wheel.packages = ["src/aiscat"]
# Vendored upstream Source/ files (populated by scripts/prepare_sdist.py).
sdist.include = [
    "Source/**/*.h",
    "Source/**/*.cpp",
]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_i686 pp*"
test-command = "python {project}/python/tests/test_decode.py"

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.cibuildwheel.macos]
archs = ["auto"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
